Revisiting ai/automata/Experiment. Now at least outputs a random automata field on the screen.  math/automata/viz/Drawer.java was broken.  Now uses gfx/TextGraphics.java instead of direct vt100 calls.  Started moving tests into sibling files in sources dir for util.